# hs-e164

./: .gitignore  LICENSE  README.md  hs-e164.cabal
lib/Telephony/PSTN/: E164.hs
lib/Telephony/PSTN/E164/: Types.hs
src/Telephony/PSTN/: E164.hs
src/Telephony/PSTN/E164/: NANP.hs  Types.hs
test/: Spec.hs
